unpackaged/main/default/objects/zkmulti__Shipment_Status__c/zkmulti__Shipment_Status__c.object-meta.xml
<CustomObject>
    <label>Shipment Status</label>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>Shipment Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment Status</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>