unpackaged/main/default/objects/zkmulti__Shipment_Status__c/fields/zkmulti__Status__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PROCESSING</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>VALIDATED</fullName>
            </value>
            <value>
                <fullName>SUCCESS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>