unpackaged/main/default/objects/zkmulti__Shipment_Status__c/fields/zkmulti__Timestamp__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Timestamp__c</fullName>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>